Initial adjustments to Java 17